<resources>
    <string name="app_name">ANNISAAYUWAHDINI_1202150288_MODUL2</string>
    <string name="pilih_menu">Pilih Menu:</string>
    <string name="pesan_sekarang">Pesan Sekarang</string>
    <string name="detail_customer">Detail Customer : </string>
    <string name="dine_in">Dine in</string>
    <string name="no_meja">No. Meja : </string>
    <string name="pilih_pesanan">Pilih Pesanan</string>
    <string name="identitas_pemesanan">Identitas Pemesanan :</string>
    <string name="vegpizza">Vegetarian Pizza</string>
    <string name="nothing_selected">onNothingSelected:</string>
    <string name="price">Price: Rp 55.000,00</string>
    <string name="meatpizza">Meat Lovers Pizza</string>
    <string name="mushroom_pizza">Mushroom Pizza</string>

    <string-array name="labels_array">
        <item>Meja 1</item>
        <item>Meja 2</item>
        <item>Meja 3</item>
        <item>Meja 4</item>
        <item>Meja 5</item>
    </string-array>
</resources>
