<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.android.annisaayuwahdini_1202150288_modul2.DineInActivity">


    <TextView
        android:id="@+id/detail_cust"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/detail_customer"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textAlignment="center"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"/>


    <EditText
        android:id="@+id/nama"
        android:layout_width="200sp"
        android:layout_height="wrap_content"
        android:hint="Name"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="53dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/nomeja"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="100sp"
            android:layout_marginTop="15dp"
            android:text="@string/no_meja"
            android:textAlignment="center" />

        <Spinner
            android:id="@+id/label_spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="45dp"
            android:layout_marginTop="10dp"></Spinner>

    </LinearLayout>

    <Button
        android:id="@+id/pilihpesanan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pilih_pesanan"
        android:layout_gravity="center"
        android:textAlignment="center"
        android:onClick="onButtonClicked"/>
</LinearLayout>