<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.android.annisaayuwahdini_1202150288_modul2.MainActivity">

    <ImageView
        android:id="@+id/splashscreen"
        android:layout_width="248dp"
        android:layout_height="200dp"
        android:layout_gravity="center"
        android:src="@drawable/bc" />

    <TextView
        android:id="@+id/pilihmenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pilih_menu"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textAlignment="center"
        android:layout_gravity="center"/>

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@id/pilihmenu">

    <RadioButton
        android:id="@+id/dine_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dine_in"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:layout_marginRight="3dp" />

    <RadioButton
        android:id="@+id/takeaway"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Take Away"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:layout_marginRight="2dp"
        android:layout_marginLeft="11dp" />

    </RadioGroup>

    <Button
        android:id="@+id/pesan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pesan_sekarang"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:onClick="onRadioButtonClicked"/>
</LinearLayout>
